<resources>
    <string name="app_name">LISTAEXAMENMOVILES2</string>
    <string name="button1">Activo</string>
    <string name="string_button" />
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="todo">TODO</string>
    <string name="button2">Button</string>
    <string name="textview8">TextView</string>
    <string name="textview9">TextView</string>
    <string name="textview10">TextView</string>
    <string name="textview11">TextView</string>
    <string name="textview">TextView</string>
    <string name="button3">Button</string>
    <string name="textview5">TextView</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="button6">Button</string>
    <string name="todo6">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo1">TODO</string>
    <string name="activo">ACTIVO</string>
    <string name="activo2">ACTIVO</string>
    <string name="cancelado">CANCELADO</string>
    <string name="inactivo">INACTIVO</string>
    <string name="activo1">ACTIVO</string>
    <string name="cancelado1">CANCELADO</string>
    <string name="peter">PETER</string>
    <string name="alejandra">ALEJANDRA</string>
    <string name="martin">MARTIN</string>
    <string name="rachel">RACHEL</string>
    <string name="duke">DUKE</string>
    <string name="jennifer">JENNIFER</string>
    <string name="vancouver">VANCOUVER</string>
    <string name="mexico_city">MEXICO CITY</string>
    <string name="ontario">ONTARIO</string>
    <string name="new_york">NEW YORK</string>
    <string name="boston">BOSTON</string>
    <string name="toronto">TORONTO</string>
</resources>