<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="403dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#EB910808"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/peter"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/peter"
                    android:textColor="#070707"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vancouver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/vancouver"
                    android:textColor="#070707"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="#D1C4C4"
                    android:text="@string/activo" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="403dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="161dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#919AD1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alejandra"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/alejandra"
                    android:textColor="#070707"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mexicocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/mexico_city"
                    android:textColor="#070707"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="#D1C4C4"
                    android:text="@string/activo" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="403dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="265dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#3A919A"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/martin"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/martin"
                    android:textColor="#070707"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ontario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/ontario"
                    android:textColor="#070707"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="#D1C4C4"
                    android:text="@string/cancelado" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="403dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#DADF7553"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rachel"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/rachel"
                    android:textAlignment="textStart"
                    android:textColor="#070707"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/newyork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/new_york"
                    android:textColor="#070707"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="#D1C4C4"
                    android:text="@string/inactivo" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="403dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="465dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#12C36C"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/duke"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/duke"
                    android:textColor="#070707"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/boston"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/boston"
                    android:textColor="#070707"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="#D1C4C4"
                    android:text="@string/activo" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="403dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="565dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#A7FFEB"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/jennifer"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/jennifer"
                    android:textColor="#070707"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/toronto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/toronto"
                    android:textColor="#070707"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="#D1C4C4"
                    android:text="@string/cancelado" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>